# TeamsNotificationController

./: Cargo.toml  Readme.md
src/: kubernetes.rs  main.rs  teams.rs
