[package]
name = "teams_notification_controller"
version = "0.1.0"
authors = ["Shekhar <patnaikshekhar@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
kube = "0.38.0"
kube-derive = "0.38.0"
kube-runtime = "0.38.0"
k8s-openapi = { version = "0.9.0", default-features = false, features = ["v1_17"] }
clap = "2.33"
tokio = { version = "0.2", features = ["full"] }
anyhow = "1.0"
log = "0.4"
env_logger = "0.7"
futures = "0.3.5"